# projects

./: P953MO.llb  RO47002-final-assignment-2025.ipynb
group74/: LABGROUP.md  README.md
group74/control_barrel_world/: CMakeLists.txt  package.xml
group74/control_barrel_world/include/control_barrel_world/: control_barrel_world.hpp
group74/control_barrel_world/launch/: solution.launch.xml
group74/control_barrel_world/src/: control_barrel_world.cpp  control_barrel_world_functions.cpp
group74/pcl_obstacle_detector/: CMakeLists.txt  package.xml
group74/pcl_obstacle_detector/include/pcl_obstacle_detector/: pcl_obstacle_detector.hpp
group74/pcl_obstacle_detector/src/: pcl_obstacle_detector.cpp  pcl_obstacle_detector_functions.cpp
